--- a/Acerca de nosotros.html
+++ b/Acerca de nosotros.html
@@ -146,18 +146,20 @@
           src="img/AcercaNosotros/img2.jpg"
           alt="segunda_imagen"
         />
-        <p class="parrafo2">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam
-          pariatur libero quia optio! Alias quidem quo quod sunt suscipit!
-          Similique nisi pariatur dolores. Repellendus error porro consequatur
-          recusandae exercitationem dicta quae dolore culpa, corrupti unde quos
-          alias assumenda soluta nesciunt fugiat quaerat ratione, consectetur
-          voluptas adipisci! Aliquam rem laborum corrupti quisquam labore
-          voluptatibus, et ducimus doloremque quibusdam deserunt, voluptatum
-          voluptates? Amet reprehenderit quod, itaque consequuntur voluptas
-          dolorem delectus veritatis nesciunt? Natus ducimus magnam quaerat
-          nesciunt.
-        </p>
+        <div class="parrafo2">
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam
+            pariatur libero quia optio! Alias quidem quo quod sunt suscipit!
+            Similique nisi pariatur dolores. Repellendus error porro consequatur
+            recusandae exercitationem dicta quae dolore culpa, corrupti unde
+            quos alias assumenda soluta nesciunt fugiat quaerat ratione,
+            consectetur voluptas adipisci! Aliquam rem laborum corrupti quisquam
+            labore voluptatibus, et ducimus doloremque quibusdam deserunt,
+            voluptatum voluptates? Amet reprehenderit quod, itaque consequuntur
+            voluptas dolorem delectus veritatis nesciunt? Natus ducimus magnam
+            quaerat nesciunt.
+          </p>
+        </div>
       </div>
     </main>
     <div class="separador">
