--- a/Acerca de nosotros.html
+++ b/Acerca de nosotros.html
@@ -141,16 +141,25 @@
         />
         <div class="parrafo2">
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam
-            pariatur libero quia optio! Alias quidem quo quod sunt suscipit!
-            Similique nisi pariatur dolores. Repellendus error porro consequatur
-            recusandae exercitationem dicta quae dolore culpa, corrupti unde
-            quos alias assumenda soluta nesciunt fugiat quaerat ratione,
-            consectetur voluptas adipisci! Aliquam rem laborum corrupti quisquam
-            labore voluptatibus, et ducimus doloremque quibusdam deserunt,
-            voluptatum voluptates? Amet reprehenderit quod, itaque consequuntur
-            voluptas dolorem delectus veritatis nesciunt? Natus ducimus magnam
-            quaerat nesciunt.
+            EXOTIC LIQUOR SAS, es una empresa que nace a partir de una idea de
+            emprendimiento de un joven empresario, quien desde el año 2.016
+            adelanto junto con un equipo de trabajo la idea de crear un producto
+            representativo del departamento del Tolima y el país. Fue ahí donde
+            se vio por primera vez el licor de café DE LOS ANDES VIP, se
+            realizaron participaciones en diferentes ferias y eventos con
+            énfasis en el agro y el café como AGRO EXPO 2.017, FERIA DE CAFES
+            ESPECIALES EN ANZOATEGUI AÑO 2.017, FERIA DE TE Y CAFÉ EN LA CASA
+            DEL SEÑOR EMBAJADOR DE LA REPUBLICA POPULAR DE CHINA, LANZAMIENTO
+            TASA A LA EXCELENCIA COLOMBIA TIERRA DE DIVERSIDAD EN LA CASA DEL
+            TOLIMA EN BOGOTA, entre muchas más, para poder mirar la aceptación
+            del producto, y desarrollarlo de tal manera que lograra los
+            objetivos planteados. En el año 2.019 en la convocatoria 69 primer
+            corte, la empresa EXOTIC LIQUOR SAS sale favorecida con recursos
+            para poner en marcha dicho proyecto e idea innovadora.
+            Posteriormente el 08 de julio del 2.020 es cuando se inicia la
+            ejecución de la empresa y en el mes de septiembre del año 2.021 la
+            empresa ya cuenta con todos los permisos y requisitos legales para
+            iniciar con su venta.
           </p>
         </div>
       </div>
