--- a/Acerca de nosotros.html
+++ b/Acerca de nosotros.html
@@ -115,20 +115,18 @@
       <h1 class="titulo">Nuestra Empresa</h1>
       <img
         class="primera_imagen"
-        src="img/AcercaNosotros/img3.jpg"
+        src="img/AcercaNosotros/nuestraEmpresa.jpg"
         alt="primera_imagen"
       />
       <div class="contenedor1">
         <p class="parrafo">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
-          asperiores atque! Placeat omnis doloremque beatae dolorem architecto
-          sed harum asperiores numquam magnam quas consectetur odit, sequi iusto
-          commodi eveniet molestiae repellendus magni aliquid fugiat. Corporis
-          non quia perspiciatis temporibus aliquid? Aut nobis at quas animi,
-          voluptatum eveniet facere rem accusamus earum tenetur dolores
-          temporibus necessitatibus consequuntur illo vel amet magnam tempore
-          accusantium ut beatae repellendus. Iure, eaque voluptates amet rem
-          dolore ipsa molestias autem perspiciatis.
+          Nuestra empresa es el claro ejemplo que todo con ezfuerzo se puede
+          lograr surgio de una pequeña idea y ahora estamos felices del gran
+          trabajo que hemos conseguido, La empresa como nuestro nombre lo indica
+          se encarga de elaborar licor a base de cafe de este mismo surgen
+          recetas como cocteles fianmente elaborados hasta nuestro granizado de
+          café de los Andes VIP, nuestros productos son de calidad y 100%
+          natural.
         </p>
       </div>
       <hr class="separador1" />
@@ -136,7 +134,7 @@
       <div class="contenedor">
         <img
           class="segunda_imagen"
-          src="img/AcercaNosotros/img2.jpg"
+          src="img/AcercaNosotros/Historia.jpg"
           alt="segunda_imagen"
         />
         <div class="parrafo2">
