--- a/Contactanos.html
+++ b/Contactanos.html
@@ -116,18 +116,14 @@
       <br />
       <div class="Pcontacto">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam nisi
-          labore minima aspernatur error odit delectus tempora rerum odio, nemo
-          reiciendis officia. Expedita voluptatibus, tempore temporibus magnam
-          cum dolor quod id, ipsa illo vel, repellat harum iste est tenetur.
-          Officiis dignissimos laudantium, totam placeat magnam enim expedita
-          eum, illo omnis accusamus id labore tempore quaerat maxime molestiae
-          consequuntur eveniet quidem necessitatibus blanditiis soluta cum
-          exercitationem! Expedita cum saepe minus ut quae, dolore repellendus
-          repellat eum mollitia provident ipsum magnam? Aperiam voluptatum
-          aspernatur incidunt praesentium minima voluptatibus debitis? Tempora,
-          nulla possimus. Nisi pariatur fugiat numquam sit vitae quod alias
-          nulla blanditiis?
+         
+Nuestra empresa esta ubicada en el mayor centro empresarial, comercial 
+y de servicios de la región. Su ubicaión privilegiada, infracestructura 
+idonea y servicios lo convierte en la plataforma ideal para nuestra empresa. <br><br> 
+exoticliquor@hotmail.com <br>
+exoticliquor@gmail.com<br>
+2675069<br>
+3227601249<br>
         </p>
       </div>
       <div class="redes_sociales_black">
@@ -150,32 +146,19 @@
       <hr class="lineaC" />
       <div class="informacion_lugar">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae tenetur
-          soluta corrupti ratione expedita temporibus totam alias repellendus
-          vero quibusdam, repellat assumenda magni fugit dicta eveniet odit
-          officiis accusantium pariatur suscipit iste blanditiis nisi? Enim
-          explicabo dolore cumque facilis, alias voluptate vel voluptas ipsam
-          placeat minus eligendi qui inventore eius sapiente optio, dolorum
-          officia! Pariatur veritatis optio voluptates rem expedita voluptatem
-          nostrum quas corporis dignissimos adipisci perferendis, id reiciendis
-          magnam ea ipsum ducimus saepe provident ullam. Consequuntur, quia
-          asperiores. Nulla blanditiis nam ab sit, officiis rerum et vero quam
-          facere voluptatem laborum at fugit nobis numquam porro debitis ut
-          explicabo ullam! Nostrum delectus dolores voluptas sit, eos beatae
-          dicta est voluptates minima. Fugit aperiam itaque distinctio dolor.
-          Repudiandae provident obcaecati excepturi aut eos deserunt rem facere
-          at rerum atque veniam autem modi exercitationem nemo voluptatem
-          officiis quam optio laboriosam quidem quaerat tenetur cumque iste,
-          quia error. Ducimus reprehenderit iste dolore.
+   
+ Parque logístico nacional del Tolima bodega C-42       <br> <br>
+         El Parque logistico nacional del Tolima se encuentra en el kilometro 17 
+via ibague Bogotá. Corregimiento Buenos Aires.
+Es el unico parque logistico que cuenta con acueducto para el suministro
+de agua. 
+
         </p>
       </div>
       <div class="Container_map">
         <div class="mapa">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15911.446725266866!2d-75.21008491516115!3d4.43684386738029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e38c4e6dfdb41b3%3A0xda972bb122c7b43a!2sCentro%20Comercial%20Multicentro!5e0!3m2!1ses!2sco!4v1632167992119!5m2!1ses!2sco"
-            width="450"
-            height="400"
-            loading="lazy"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248.61943683296306!2d-75.19867857262!3d4.427681295768566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e38c508f294f145%3A0x70220851585e2a97!2sParque%20Log%C3%ADstico%20Nacional%20Del%20Tolima!5e0!3m2!1ses-419!2sco!4v1639437086257!5m2!1ses-419!2sco" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           ></iframe>
         </div>
       </div>
