--- a/Equipo_Trabajo.html
+++ b/Equipo_Trabajo.html
@@ -116,11 +116,12 @@
         <img src="img/Empleados/img1.jpg" class="image-borde" alt="Empleado1" />
         <div class="card">
           <div class="card-body">
-            <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum,
-              reprehenderit consequuntur. Cumque similique ea est inventore,
-              possimus quidem eaque magnam commodi, dolorum perferendis autem
-              temporibus obcaecati iure officiis debitis ipsum.
+            <p class="card-text">             
+              Nuestro equipo de caficultores son fundamentales para nuestra empresa 
+              son los adeacuados para esta grande labor, agradecemos su 
+              compromiso y dedicación con la cual elaboran y nos ayudan a llegar 
+              a los hogares de los tolimenses.
+
             </p>
           </div>
         </div>
@@ -137,10 +138,9 @@
         <div class="card">
           <div class="card-body">
             <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum,
-              reprehenderit consequuntur. Cumque similique ea est inventore,
-              possimus quidem eaque magnam commodi, dolorum perferendis autem
-              temporibus obcaecati iure officiis debitis ipsum.
+              Diana al igual que nuestras productoras nos ayudan en la elaboración de 
+              nuestro licor sus manos son las encargadas de procesar cada ingrediente 
+              incluyendo el cafe seleccionado por nuestros caficultores.
             </p>
           </div>
         </div>
@@ -157,11 +157,10 @@
 
         <div class="card">
           <div class="card-body">
-            <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum,
-              reprehenderit consequuntur. Cumque similique ea est inventore,
-              possimus quidem eaque magnam commodi, dolorum perferendis autem
-              temporibus obcaecati iure officiis debitis ipsum.
+            <p class="card-text">              
+              Maria es una de nuestras grandes vendedoras, se encarga de la comunicación 
+              con los provedores y puntos de ventas mayoristas, sin ella nuestro trabajo 
+              no podria llegar a sus hogares. 
             </p>
           </div>
         </div>
@@ -183,10 +182,9 @@
         <div class="card">
           <div class="card-body">
             <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum,
-              reprehenderit consequuntur. Cumque similique ea est inventore,
-              possimus quidem eaque magnam commodi, dolorum perferendis autem
-              temporibus obcaecati iure officiis debitis ipsum.
+            La señora Olga hace parte de nuestro equipo de gerentes, es la encargada de
+            toda la parte administrartiva y contable de nuestra empresa sin ella nuestra 
+            empresa tendria falencias y con esto no surgiriamos como lo planeamos.
             </p>
           </div>
         </div>
