--- a/anzoategui.html
+++ b/anzoategui.html
@@ -118,9 +118,11 @@
         </div>
         <div class="caracteristicas">
           <p class="p1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
-            aliquam facere tempora maiores pariatur neque, ipsa repellat
-            reiciendis deserunt dicta facilis ad consequatur. Possimus, atque.
+            Fue fundado el 16 de julio de 1895 como la Villa de la Palma, por un
+            grupo de antioqueños que en su afán de nuevos horizontes levantaron
+            las primeras casas; luego cambió de nombre a Briceño y desde 1930 es
+            llamada Anzoátegui; se encuentra ubicado al norte del departamento
+            del Tolima y la población yace sobre la cima de una montaña.
           </p>
           <div class="imagen">
             <img src="img/Anzoategui/Anzoátegui1.jpg" alt="" />
@@ -128,9 +130,13 @@
         </div>
         <div class="caracteristicas1">
           <p class="p2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
-            aliquam facere tempora maiores pariatur neque, ipsa repellat
-            reiciendis deserunt dicta facilis ad consequatur. Possimus, atque.
+            El municipio es la puerta de entrada al Parque Nacional Natural de
+            los Nevados, basa su economía en productos agrícolas, ganaderos y el
+            turismo. Cuenta con una gran riqueza natural, con una maravillosa
+            biodiversidad de especies vegetales y una gran diversidad de aves,
+            con una incalculable riqueza hídrica por la presencia del Nevado del
+            Tolima de donde nacen dos ríos que lo circundan, posee una gran
+            cantidad de lagunas y termales.
           </p>
           <div class="imagen1">
             <img
