--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </a>
                 </div>
                 <div class="item" id="texto">
-                    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid odit illo amet, consequuntur provident ex quisquam corporis quibusdam a aspernatur? Sequi earum ipsam quos ad pariatur aperiam soluta maxime officiis!</h2>
+                    <h2>Este producto es fabricado 100% con cafés especiales del departamento del Tolima, es un Licor que cuenta con un porcentaje de azúcar y 25 grados de alcohol. Se puede consumir directo, uso en coctelería, baristeria, culinaria, repostería entre otros. La característica innovadora del De Los andes Vip es que el cliente consumidor puede seleccionar la zona en la cual fue cultivado el café dentro de una amplia variedad que le ofrece la marca.</h2>
                 </div>
             </div>
         
@@ -125,7 +125,9 @@
                             <div class="lado frente">
                                 <img src="img/proveedores/proveedor.jpg" alt="">
                             </div>
-                            <div class="lado atras"></div>
+                            <div class="lado atras">
+                                <p>ASOCAFÉ, creada en 1990, es una organización democráticamente constituida, autónoma y  sin fines de lucro que apoya a las familias de los pequeños productores cafetaleros</p>
+                            </div>
                         </div>
                     </div>
                     <!-- boton ir hacia arriba -->
