--- a/Equipo_Trabajo.html
+++ b/Equipo_Trabajo.html
@@ -140,7 +140,7 @@
             <p class="card-text">
               Diana al igual que nuestras productoras nos ayudan en la elaboración de 
               nuestro licor sus manos son las encargadas de procesar cada ingrediente 
-              incluyendo el cafe seleccionado por nuestros caficultores.
+              incluyendo el café seleccionado por nuestros caficultores.
             </p>
           </div>
         </div>
