--- a/Ibagué.html
+++ b/Ibagué.html
@@ -117,18 +117,19 @@
       <h1 class="caracteristicas">Ibagué</h1>
       <div class="P1">
         <p>
-          Es un hecho establecido hace demasiado tiempo que un lector se
-          distraerá con el contenido del texto de un sitio mientras que mira su
-          diseño. El punto de usar Lorem Ipsum es que tiene una distribución más
-          o menos normal de las letras, al contrario de usar textos como por
-          ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo
-          un español que se puede leer. Muchos paquetes de autoedición y
-          editores de páginas web usan el Lorem Ipsum como su texto por defecto,
-          y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos
-          sitios web que usan este texto si se encuentran en estado de
-          desarrollo. Muchas versiones han evolucionado a través de los años,
-          algunas veces por accidente, otras veces a propósito (por ejemplo
-          insertándole humor y cosas por el estilo).
+          Es la capital del departamento de Tolima. Se encuentra a una altitud
+          de 1285 msnm; Fue fundada el 14 de octubre de 1550 por el capitán
+          español Andrés López de Galarza, lo que la convierte en una de las
+          ciudades más antiguas de América. En las grandes montañas de Ibague,
+          Tolima, Colombia, <br />
+          <br />
+          En una vereda llamada tapias, Se cultiva este maravilloso café. Una
+          mezcla entre dos grandes variedades de café, nos da como resultado un
+          sutil y suave sabor en una copa de licor café.
+          <br></br>
+          Se obtienen cafés con acidez media alta brillante, ligera dulzura mezclada con una gran diversidad de notas que van desde los cítricos característicos de la región, pasando por las achocolatadas, dulces a panela y caramelo, hasta exóticas notas a frutos rojos.
+
+
         </p>
       </div>
       <br />
@@ -138,18 +139,19 @@
       <div class="Lineav"></div>
       <div class="P2">
         <p>
-          En primer lugar, se considera que la rareza y escasez de una piedra
-          son determinantes para catalogarla como piedra preciosa. La amatista
-          llegó a ser considerada como una piedra preciosa porque era escasa,
-          pero cuando se descubrieron las minas en Brasil y se convirtió en una
-          piedra abundante, dejó de serlo. Por otro lado, los grados de dureza
-          más altos los tienen las piedras preciosas, siendo el diamante el
-          mineral de mayor dureza en la escala de Mohs, seguido de los
-          corindones (rubí y zafiro) y de la esmeralda. Un alto grado de dureza
-          es sinónimo de durabilidad. Finalmente, las piedras semipreciosas
-          tienen un valor muy dispar entre ellas y es más fácil conseguir
-          piedras semipreciosas de gran tamaño puras que piedras preciosas de
-          tales características.
+          Ibagué, capital del departamento del Tolima, es una tierra tan llena
+          de música que su himno no es una melodía militar, sino una canción
+          alegre del folclor popular. No en vano, la ciudad es llamada la
+          ‘Capital Musical de Colombia’. <br />
+          <br />
+          Además, Ibagué es un importante eje financiero y económico de
+          Colombia. De hecho, es sede del Banco de la República de Colombia y de
+          la Casa de la Moneda. <br />
+          <br />
+          En la ciudad encontrarás numerosos restaurantes para todos los gustos
+          y bolsillos, donde podrás probar platos típicos como el tamal, la
+          lechona, los bizcochos de achira y nuestros
+          tradicional café Tolimense.
         </p>
       </div>
       <div class="ibague1">
