--- a/anzoategui.html
+++ b/anzoategui.html
@@ -122,7 +122,14 @@
             grupo de antioqueños que en su afán de nuevos horizontes levantaron
             las primeras casas; luego cambió de nombre a Briceño y desde 1930 es
             llamada Anzoátegui; se encuentra ubicado al norte del departamento
-            del Tolima y la población yace sobre la cima de una montaña.
+            del Tolima y la población yace sobre la cima de una montaña. <br />
+            <br />
+            Anzoátegui es un municipio de Colombia en el departamento de
+            Tolima.​ El municipio limita por el norte con los municipios de
+            Santa Isabel y Venadillo, por el este con el municipio de Alvarado,
+            por el oeste con el departamento del Quindío; y por el sur con el
+            municipio de Ibagué, capital del departamento de Tolima. La
+            población de Anzoátegui nace sobre la cima de una montaña.
           </p>
           <div class="imagen">
             <img src="img/Anzoategui/Anzoátegui1.jpg" alt="" />
@@ -130,13 +137,14 @@
         </div>
         <div class="caracteristicas1">
           <p class="p2">
-            El municipio es la puerta de entrada al Parque Nacional Natural de
-            los Nevados, basa su economía en productos agrícolas, ganaderos y el
-            turismo. Cuenta con una gran riqueza natural, con una maravillosa
-            biodiversidad de especies vegetales y una gran diversidad de aves,
-            con una incalculable riqueza hídrica por la presencia del Nevado del
-            Tolima de donde nacen dos ríos que lo circundan, posee una gran
-            cantidad de lagunas y termales.
+            El municipio de Anzoátegui basa su economía principalmente en
+            productos agrícolas y ganaderos, especialmente en el café, pero
+            también el maíz, caña de azúcar, papa, plátano, yuca, arracacha,
+            entre otros <br />
+            <br />
+            A menor escala tiene una economía apícola ya que su flora y fauna,
+            Anzoátegui tiene un ecosistema apto para las abejas y las flores
+            para la producción de miel y otros derivados
           </p>
           <div class="imagen1">
             <img
