--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
                                 <img src="img/proveedores/proveedor.jpg" alt="">
                             </div>
                             <div class="lado atras">
-                                <p>ASOCAFÉ, creada en 1990, es una organización democráticamente constituida, autónoma y  sin fines de lucro que apoya a las familias de los pequeños productores cafetaleros</p>
+                                <p>  <b>
+                                    ASOCAFÉ
+                                </b>  
+                                , creada en 1990, es una organización democráticamente constituida, autónoma y  sin fines de lucro que apoya a las familias de los pequeños productores cafetaleros</p>
                             </div>
                         </div>
                     </div>
